p2/scripts/srcs/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  # type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
