p2/scripts/srcs/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  # type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
