p2/scripts/srcs/service-app3.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  # type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
